# project1_Ovsyannikov_Sergey_M25-555

./: README.md  demo.cast  makefile  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
