[project]
name = "project1-ovsyannikov-sergey-m25-555"
version = "0.1.0"
description = ""
authors = [
    {name = "Sergey Ovsyannikov",email = "s.ovsyannikov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [
      {include = "labyrinth_game"} ,
 ]
 
[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [] 

[dependency-groups]
dev = [
    "ruff (>=0.14.5,<0.15.0)"
]
